--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ env:
     - TRAVIS_PYTHON_VERSION=3.6
     - TRAVIS_PYTHON_VERSION=3.7
     - TRAVIS_PYTHON_VERSION=3.8
-
+    - TRAVIS_PYTHON_VERSION=3.9
+    
 before_script:
   - |
     if [ -n "$KEEP_GOING" ];
