--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ env:
     - MOSEK=/home/travis/build/mosek
     - MOSEKLM_LICENSE_FILE=/home/travis/build/testbot/restricted/mosek.lic
     - DEBIAN_FRONTEND=noninteractive
-    - DOCKCROSS=manylinux
-    - BITNESS=64
+    - ARCH=manylinux2014-aarch64
 
 os: linux
 dist: trusty
@@ -19,17 +18,21 @@ before_script:
   - set -e
  
 script:
-  - script_debian python_install "-DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$MANYLINUX_PYTHON_INCLUDE_DIR -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DWITH_DEEPBIND=ON -DCMAKE_INSTALL_PREFIX=../python_install" python_source
-  - export PYTHONPATH=$PYTHONPATH:`pwd`/python_install
-  - python -c "from casadi.tools import *;loadAllCompiledPlugins()"
-  - python -c "from casadi import *;x = MX.sym('x');solver = nlpsol('solver','worhp',dict(x=x,g=x**2,f=x**6),dict(worhp=dict(MaxIter=2)));solver(lbg=1,ubg=2)"
-  - pushd test
-  #- python internal/test_py.py python -skipfiles="alltests.py helpers.py complexity.py speed.py"
-  - popd
+  - script_debian python_install "-DPYTHON_LIBRARY=$CMAKE_PYTHON_LIBRARY -DPYTHON_INCLUDE_DIR=$MANYLINUX_PYTHON_INCLUDE_DIR -DWITH_SELFCONTAINED=ON -DWITH_PYTHON=ON -DWITH_DEEPBIND=ON -DCMAKE_INSTALL_PREFIX=../python_install" python_source "-DWITH_PYTHON=ON"
+  - |
+    if [[ $ARCH == manylinux1-x64 ]]
+    then
+      export PYTHONPATH=$PYTHONPATH:`pwd`/python_install
+      python -c "from casadi.tools import *;loadAllCompiledPlugins()"
+      python -c "from casadi import *;x = MX.sym('x');solver = nlpsol('solver','worhp',dict(x=x,g=x**2,f=x**6),dict(worhp=dict(MaxIter=2)));solver(lbg=1,ubg=2)"
+      pushd test
+      python internal/test_py.py python -skipfiles="alltests.py helpers.py complexity.py speed.py"
+      popd
+    fi
   
 before_deploy:
   - echo "this file (and the casadi directory) should end up in a folder called 'casadi-linux-py$PYTHONVERSION-$COMMIT'" > python_install/dummy.txt
-  - export RESULT="$HOME/casadi-linux-py$PYTHONVERSION-$COMMIT-${BITNESS}bit.tar.gz"
+  - export RESULT="$HOME/casadi-linux-py$PYTHONVERSION-$COMMIT-$ARCH.tar.gz"
   - pushd python_install && tar -czf $RESULT . && popd
   - export TRAVIS_TAG="commit-$COMMIT"
 
@@ -42,26 +45,24 @@ deploy:
   on:
     all_branches: true
 
-python: 3.2
+python: 3.6
 
 matrix:
   include:
-    - python: 2.7
-      env: BITNESS=64 TESTCOMMIT=1
-    - python: 3.4
-      env: BITNESS=64
-    - python: 3.5
-      env: BITNESS=64
-    - python: 3.6
-      env: BITNESS=64
-    - python: 3.6
-      env: BITNESS=64 PYTHON_VERSION=3.7
-    - python: 3.6
-      env: BITNESS=64 PYTHON_VERSION=3.8
-    - python: 3.6
-      env: BITNESS=64 PYTHON_VERSION=3.9
-  exclude:
-    - python: 3.2
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=2.7 TESTCOMMIT=1
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.4
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.5
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.6
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.7
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.8
+    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.9
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=2.7
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.4
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.5
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.6
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.7
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.8
+    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.9
   
 after_success:
   - test_commit test-debian
@@ -73,7 +74,7 @@ branches:
     - /.*commit.*/
     
 before_install: 
-  - wget https://raw.githubusercontent.com/casadi/testbot/master/before_install.sh && source before_install.sh
+  - wget https://raw.githubusercontent.com/casadi/testbot/trial2/before_install.sh && source before_install.sh
   - before_install_debian
   
 
