--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   
 before_deploy:
   - export RESULT="$HOME/casadi-source-matlab-$COMMIT.tar.gz"
-  - tar -czf $RESULT .
+  - tar --exclude=".*" -czf $RESULT .
   - export TRAVIS_TAG="commit-$COMMIT"
 
 deploy:
