--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ env:
     - MOSEK=/home/travis/build/mosek
     - MOSEKLM_LICENSE_FILE=/home/travis/build/testbot/restricted/mosek.lic
     - DEBIAN_FRONTEND=noninteractive
-    - ARCH=manylinux2014-aarch64
+    #- ARCH=manylinux2014-aarch64
+    - ARCH=manylinux1-x86
 
 os: linux
 dist: trusty
