--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ env:
     - MOSEK=/home/travis/build/mosek
     - MOSEKLM_LICENSE_FILE=/home/travis/build/testbot/restricted/mosek.lic
     - DEBIAN_FRONTEND=noninteractive
-    #- ARCH=manylinux2014-aarch64
-    - ARCH=manylinux1-x86
 
 os: linux
 dist: trusty
@@ -50,20 +48,27 @@ python: 3.6
 
 matrix:
   include:
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=2.7 TESTCOMMIT=1
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.4
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.5
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.6
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.7
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.8
-    - env: ARCH=manylinux1-x64 PYTHON_VERSION=3.9
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=2.7
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.4
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.5
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.6
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.7
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.8
-    - env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.9
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=2.7 TESTCOMMIT=1
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.4
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.5
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.6
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.7
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.8
+    #- env: ARCH=manylinux1-x64 PYTHON_VERSION=3.9
+    - env: ARCH=manylinux1-x86 PYTHON_VERSION=2.7 TESTCOMMIT=1
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.4
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.5
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.6
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.7
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.8
+    #- env: ARCH=manylinux1-x86 PYTHON_VERSION=3.9
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=2.7
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.4
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.5
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.6
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.7
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.8
+    #- env: ARCH=manylinux2014-aarch64 PYTHON_VERSION=3.9
   
 after_success:
   - test_commit test-debian
