--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ env:
     - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=64 compilerprefix=x86_64-w64-mingw32 OCTAVE_VERSION=5.1.0 OCTAVE_API_VERSION=7 OCTAVE_PREFIX="mingw64/"
     - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=32 compilerprefix=i686-w64-mingw32 OCTAVE_VERSION=5.2.0 OCTAVE_API_VERSION=7 OCTAVE_PREFIX="mingw32/"
     - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=64 compilerprefix=x86_64-w64-mingw32 OCTAVE_VERSION=5.2.0 OCTAVE_API_VERSION=7 OCTAVE_PREFIX="mingw64/"
+    - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=32 compilerprefix=i686-w64-mingw32 OCTAVE_VERSION=6.1.0 OCTAVE_API_VERSION=8 OCTAVE_PREFIX="mingw32/"
+    - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=64 compilerprefix=x86_64-w64-mingw32 OCTAVE_VERSION=6.1.0 OCTAVE_API_VERSION=8 OCTAVE_PREFIX="mingw64/"
     - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=32 compilerprefix=i686-w64-mingw32 OCTAVE_VERSION=4.2.2 OCTAVE_API_VERSION=4 OCTAVE_PREFIX=""
     - BUILD_TYPE=Release NAME_SUFFIX="" BITNESS=64 compilerprefix=x86_64-w64-mingw32 TESTCOMMIT="1" OCTAVE_VERSION=4.2.2 OCTAVE_API_VERSION=4
 
